--- a/style.css
+++ b/style.css
@@ -29,8 +29,8 @@ body {
   body .card p {
     margin-bottom: 40px;
   }
-  body .card .btn {
-    margin-top: 40px;
+  .btn {
+    display: block;
     background-color: #23a6d5;
     border-radius: 5px;
     text-decoration: none;
@@ -39,8 +39,16 @@ body {
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   }
-  body .card .btn:hover {
+  .btn:hover,
+  #iterations:hover {
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  }
+  #iterations{
+      margin: 15px;
+      border: none;
+      padding: 10px;
+      border-radius: 5px;
+      transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   }
   #result{
       background-color: white;
