--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body {
   }
   .btn {
     display: block;
+    margin: 5px;
     background-color: #23a6d5;
     border-radius: 5px;
     text-decoration: none;
