--- a/style.css
+++ b/style.css
@@ -40,16 +40,36 @@ body {
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   }
-  .btn:hover,
-  #iterations:hover {
+  .btn:hover {
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   }
   #iterations{
+      -webkit-appearance: none;
+      appearance: none;
       margin: 15px;
       border: none;
-      padding: 10px;
       border-radius: 5px;
+      opacity: 0.7;
       transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  }
+  #iterations:hover{
+      opacity: 1;
+  }
+  #iterations::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    border-radius: 5px;
+    width: 25px;
+    height: 25px;
+    background: #23a6d5;
+    cursor: pointer;
+  }
+  #iterations::-moz-range-thumb {
+    border-radius: 5px;
+    width: 25px;
+    height: 25px;
+    background: #23a6d5;
+    cursor: pointer;
   }
   #result{
       background-color: white;
