--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ body {
   .btn:hover {
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   }
-  #iterations{
+  #valueSlider{
       -webkit-appearance: none;
       appearance: none;
       margin: 15px;
@@ -52,10 +52,10 @@ body {
       opacity: 0.7;
       transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   }
-  #iterations:hover{
+  #valueSlider:hover{
       opacity: 1;
   }
-  #iterations::-webkit-slider-thumb {
+  #valueSlider::-webkit-slider-thumb {
     -webkit-appearance: none;
     appearance: none;
     border-radius: 5px;
@@ -64,7 +64,7 @@ body {
     background: #23a6d5;
     cursor: pointer;
   }
-  #iterations::-moz-range-thumb {
+  #valueSlider::-moz-range-thumb {
     border-radius: 5px;
     width: 25px;
     height: 25px;
