--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ body {
     margin-top: 0;
     margin-bottom: 40px;
   }
-  body .card {
+  body article {
     padding-left: 80px;
     padding-right: 80px;
     padding-top: 40px;
@@ -26,7 +26,7 @@ body {
     text-align: center;
     box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
   }
-  body .card p {
+  body article p {
     margin-bottom: 40px;
   }
   .btn {
